--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Maciej Radzikowski <maciej@radzikowski.com.pl>",
   "license": "MIT",
   "scripts": {
-    "deploy": "serverless deploy",
-    "remove": "serverless remove",
+    "deploy": "AWS_PROFILE=elefam-dev serverless deploy --region us-east-1 --aws-profile elefam-dev",
+    "remove": "AWS_PROFILE=elefam-dev  serverless remove  --region us-east-1 --aws-profile elefam-dev",
     "start": "webpack-dev-server"
   },
   "dependencies": {
@@ -20,11 +20,11 @@
     "css-loader": "4.3.0",
     "html-webpack-plugin": "4.5.0",
     "robotstxt-webpack-plugin": "7.0.0",
-    "serverless": "^3.24.1",
-    "serverless-cloudformation-sub-variables": "0.2.1",
-    "serverless-s3-deploy": "0.10.0",
-    "serverless-s3-remover": "0.6.0",
-    "serverless-scriptable-plugin": "1.0.5",
+    "serverless": "^4.7.0",
+    "serverless-cloudformation-sub-variables": "^0.2.1",
+    "serverless-s3-deploy": "^0.10.1",
+    "serverless-s3-remover": "^0.6.0",
+    "serverless-scriptable-plugin": "^1.3.1",
     "style-loader": "1.3.0",
     "ts-loader": "8.0.4",
     "typescript": "4.0.3",
